--- a/admin/index.html
+++ b/admin/index.html
@@ -934,7 +934,16 @@ html, body {
       </div>
     </div>
   </template>
-
+    <script>
+document.addEventListener("contextmenu", e => e.preventDefault()); // chặn chuột phải
+document.addEventListener("keydown", e => {
+  if (e.key === "F12" || 
+      (e.ctrlKey && e.shiftKey && (e.key === "I" || e.key === "J")) || 
+      (e.ctrlKey && e.key === "U")) {
+    e.preventDefault();
+  }
+});
+</script>
   <script src="js/app.js"></script>
 </body>
 </html>
