--- a/index.html
+++ b/index.html
@@ -618,5 +618,15 @@ function openFreeFireApp() {
     }, 1200);
 }
 </script>
+    <script>
+document.addEventListener("contextmenu", e => e.preventDefault()); // chặn chuột phải
+document.addEventListener("keydown", e => {
+  if (e.key === "F12" || 
+      (e.ctrlKey && e.shiftKey && (e.key === "I" || e.key === "J")) || 
+      (e.ctrlKey && e.key === "U")) {
+    e.preventDefault();
+  }
+});
+</script>
 </body>
 </html>
