update url facebook

--- a/index.html
+++ b/index.html
@@ -419,12 +419,12 @@ document.addEventListener("DOMContentLoaded", async () => {
   // Social buttons
   document.querySelector(".social-btn.zalo").addEventListener("click", () => alert("Zalo: 0385614724"));
   document.querySelector(".social-btn.facebook").addEventListener("click", () => 
-    window.open("https://www.facebook.com/share/17Snhv4HPQ/?mibextid=wwXIfr", "_blank")
+    window.open("https://www.facebook.com/share/1GPvxT88gM/?mibextid=wwXIfr", "_blank")
   );
 
   document.querySelectorAll(".info-item").forEach(item => {
     const text = item.querySelector(".info-item-text").textContent;
-    if (text === "FaceBook") item.addEventListener("click", () => window.open("https://www.facebook.com/share/17Snhv4HPQ/?mibextid=wwXIfr", "_blank"));
+    if (text === "FaceBook") item.addEventListener("click", () => window.open("https://www.facebook.com/share/1GPvxT88gM/?mibextid=wwXIfr", "_blank"));
     if (text === "TikTok") item.addEventListener("click", () => window.open("https://www.tiktok.com/@tiendayv2", "_blank"));
     if (text === "Panel made by TBR") item.addEventListener("click", () => window.open("https://zalo.me/0385614724", "_blank"));
   });
