update api vps backend

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <div class="toggle-toast" id="toggleToast"></div>
     <script>
 // ==================== CẤU HÌNH SERVER ====================
-const SERVER_URL = "https://apikeyapps-production.up.railway.app";
+const SERVER_URL = "https://dangkhoaios.site";
 const APP_TOKEN   = "APP_IF5EJ3IKKVA1JY5AKURW1FTVDX6XIFLT";
 
 // ==================== BIẾN TOÀN CỤC ====================
